# Kostenprognose-OKPCH

./: .gitignore  02_Monitoring-des-couts_Serie-temporelle-trimestre.xlsx  CHANGELOG.md  LICENSE  README.md  ch_total_yearly_forecast.csv  data_utils.R  dmfm.py  main.R  multivariate_kalman_utils.R  multivariate_main.R  non_linear_main.R  out_of_sample_plot_utils.R  pyprojec.toml  pyproject.toml  requirements.txt  rmse_utils.R
.claude/: settings.local.json
.github/workflows/: test.yml
KPOKPCH/: __init__.py  dmfm.py  utils.py
KPOKPCH/DMFM/: __init__.py  dynamics.py  em.py  kalman.py  model.py  selection.py  shocks.py  utils.py
KPOKPCH/forecast/: __init__.py  forecast.py  validation.py
Prognose-OKPCH/: 02_Monitoring-des-couts_Serie-temporelle-trimestre.xlsx  analyze_missing_data.py  analyze_trend.py  forecast_costs_dmfm.py  health_costs_matrix.csv  health_costs_tensor.csv  prepare-MOKKE-data.py
R/: forecast_utils.R  growth_utils.R  multivariate_KF.R
empirical_application_swiss_health_cost_forecasting/: 02_Monitoring-des-couts_Serie-temporelle-trimestre.xlsx  data_and_forecasts_combined.csv  empirical_application_utils.py  forecast_costs_dmfm.py  main.py  output_canton_group.csv  output_canton_total.csv  output_yoy_growth.csv  prepare_mokke_data.py  prepare_personnel_data.py  shocks_config.py  su-f-14.04.02-sm-6A.csv  validate.py  validation_results.csv
tests/: conftest.py  test_dmfm.py  test_dmfm_dynamics.py  test_dmfm_em.py  test_dmfm_kalman.py  test_dmfm_misc.py  test_dmfm_missing.py  test_dmfm_model.py  test_dmfm_recovery.py  test_dmfm_robustness.py  test_dmfm_selection.py  test_dmfm_shocks.py  test_dmfm_theory.py  test_dmfm_utils.py  test_forecast.py  test_forecast_forecast.py  test_forecast_validation.py
