[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KPOKPCH"
version = "0.0.1"
dynamic = ["dependencies"]
description = "Dynamic Matrix Factor Model utilities"
readme = "README.md"
authors = [{name = "OKP Team"}]
license = {file = "LICENSE"}
requires-python = ">=3.11"

[project.optional-dependencies]
publish = ["twine"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
