[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KPOKPCH"
version = "0.0.1"
dynamic = ["dependencies"]
description = "Dynamic Matrix Factor Model utilities"
readme = "README.md"
authors = [{name = "OKP Team"}]
license = {file = "LICENSE"}
requires-python = ">=3.11"

[project.optional-dependencies]
publish = ["twine"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
packages = ["KPOKPCH"]

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false
